--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.5",
     "morgan": "^1.10.0",
+    "validator": "^13.0.0",
     "yup": "^0.28.3"
   },
   "devDependencies": {
